# catrina

./: .gitignore  .npmignore  LICENSE  MAKEFILE  Makefile  README.md  catrina  catrina.js  css-fonts-relation.json  exports.js  go.mod  install.sh  package.json  tsconfig.json
alerts/: alerts.css
apps/: apps.js
assets/: linux-install.sh
catrina/: buttons.css  config.default.css  core.css  forms.css  tables.css  utility-first.css  variables.css
cmd/: main.go
cmd/catrina/: main.go  update.go
core/fonts-and-icons/: icomoon.css
example/: example.css  example.js  index.html
forms/: form.js
internal/: build.go  catrina.go  css.go  js.go  new-project.go  start-server.go  update-lib.go  update-tool.go  utils.go  wizard.go
lib/: css-fonts-relation.json
lib/alerts/: README.md  alert.js  alerts.css  prebuild.js
lib/apps/: apps.js  screens.js
lib/buttons/: button.js  buttons.css
lib/cards/: README.md  product.css
lib/core/: README.md  export.js  variables.css
lib/footers/: README.md  black-footer.css
lib/forms/: README.md  form.js  rounded-forms.css  simple-forms.css
lib/loaders/: loader.js  loaders.css
lib/navbars/: hybrid-navbar.css
lib/notifications/: README.md  notification.js  notifications.css
lib/tables/: README.md  clear-table.css
rust/catrina/: Cargo.toml
rust/catrina/src/: catrina.rs  main.rs
rust/catrina/src/catrina/: lib.rs  project.rs  utils.rs  wizard.rs
src/: buttons.css  catrina.ts  config.default.css  core.css  core.ts  css-fonts-relation.json  index.js  utility-first.css
tooltips/: tooltips.css
ts/: catrina.ts
(+70 files in other folders)
