[package]
name = "catrina"
version = "1.0.0"
authors = ["jonhteper <jonhteper@triamseletea.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
fs_extra = "1.2.0"
eyre = "0.6.5"